# egb

./: Cargo.toml  README.md
.cargo/: config.toml
src/: buffer.rs  device.rs  emu.rs  events.rs  font.raw  font.rs  games.rs  gb.tga  gui.rs  input.rs  main.rs  rp2040.rs  simulator.rs  util.rs
src/assets/cartridges/: gb.tga  gba.tga  nes.tga
src/assets/games/: super_mario_advanced.tga  super_mario_bros.tga  super_mario_land.tga
src/gui/: core.rs  mod.rs  screen.rs
src/gui/screens/: games.rs  settings.rs
src/nes/: bus.rs  cartridge.rs  cpu.rs  emu.rs  mod.rs  new.rs  opcodes.rs  trace.rs
